--- a/proprietary/odm/etc/init/vendor.oplus.hardware.biometrics.fingerprint@2.1-service.rc
+++ b/proprietary/odm/etc/init/vendor.oplus.hardware.biometrics.fingerprint@2.1-service.rc
@@ -1,41 +1,34 @@
-service fps_hal /vendor/bin/hw/vendor.oppo.hardware.biometrics.fingerprint@2.1-service
+service fps_hal /odm/bin/hw/vendor.oplus.hardware.biometrics.fingerprint@2.1-service
     # "class hal" causes a race condition on some devices due to files created
     # in /data. As a workaround, postpone startup until later in boot once
     # /data is mounted.
     class late_start
     user system
-    group system input
+    group system input uhid
 
-service oppo_fingerprints_sh /vendor/bin/sh /vendor/bin/init.oppo.fingerprints.sh
+service oppo_fingerprints_sh /vendor/bin/sh /odm/bin/init.oppo.fingerprints.sh
     class main
     user root
     oneshot
-#ifdef VENDOR_EDIT
-#Dongnan.Wu@BSP.Fingerprint.Basic. 2018/10/26. change the seclabel to rutilsdaemon, make sure there is not limit to access dev/ proc/ path(android p)
-    seclabel u:r:rutilsdaemon:s0
-#endif /*VENDOR_EDIT*/
 
 on boot
 #for goodix_fp.
     chown system system /dev/goodix_fp
 
-#for uinput.
-    chown system system /dev/uinput
-
 #for egis fp
     chown system system /dev/esfp0
+    chmod 0660 /sys/bus/platform/devices/egis_input/navigation_enable
+    chmod 0660 /sys/bus/platform/devices/egis_input/navigation_event
+    chown system  system /sys/bus/platform/devices/egis_input/navigation_enable
+    chown system  system /sys/bus/platform/devices/egis_input/navigation_event
 
 #for silead fp
     chown system system /dev/silead_fp
     chmod 0666 /dev/silead_fp
 
 on post-fs-data
-    mkdir /data/gf_data 0700 system system
-    mkdir /data/system/gf_data 0700 system system
-    mkdir /data/images 0700 system system
-    mkdir /data/system/silead 0770 system system
 
-    #ifdef VENDOR_EDIT
+    #ifdef OPLUS_FEATURE_FINGERPRINT
     #Ran.Chen@EXP.BSP.Fingerprint.Basic, 2017/07/12, modify for fpc in TRUSTONIC
     chown system  system /sys/bus/platform/devices/fpc_interrupt/clk_enable
     chown system  system /sys/bus/platform/devices/fpc_interrupt/wakelock_enable
@@ -47,7 +40,15 @@ on post-fs-data
     chmod 0200 /sys/bus/platform/devices/fpc_interrupt/wakelock_enable
     chmod 0600 /sys/bus/platform/devices/fpc_interrupt/irq
     chmod 0660 /sys/bus/platform/devices/fpc_interrupt/irq_unexpected
-    #endif /* VENDOR_EDIT */
+    #endif /* OPLUS_FEATURE_FINGERPRINT */
+
+    #ifdef OPLUS_FEATURE_FINGERPRINT
+    #zhoubo@BSP.Biometrics.Fingerprint, 2020/09/10, modify for fpc in QCOM (SM6125R Homer)
+    chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/irq
+    chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/irq_enable
+    chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/wakelock_enable
+    #endif /* OPLUS_FEATURE_FINGERPRINT */
+
 #-----------------------  for optical sensor begin    ---------------------
     mkdir /data/vendor/fingerprint 0770 system system
     mkdir /mnt/vendor/persist/fingerprint 0770 system system
@@ -63,11 +64,3 @@ on post-fs-data
 #Ziqing.Guo@EXP.BSP.Fingerprint.Basic, 2019/08/17, modify for sdsp init fail
 on property:sys.boot_completed=1
     setprop vendor.oppo.biometrics.fingerprint.boot_completed 1
-
-#Shengwang.Luo@BSP.Fingerprint.Basic, 2020/02/19, add unlock prop
-on property:ro.boot.vbmeta.device_state=unlocked
-    setprop vendor.boot.verifiedbootstate 1
-
-on property:ro.boot.vbmeta.device_state=locked
-    setprop vendor.boot.verifiedbootstate 0
-
