--- a/proprietary/odm/etc/init/vendor.oplus.hardware.biometrics.fingerprint@2.1-service.rc
+++ b/proprietary/odm/etc/init/vendor.oplus.hardware.biometrics.fingerprint@2.1-service.rc
@@ -6,12 +6,17 @@ service fps_hal /odm/bin/hw/vendor.oplus.hardware.biometrics.fingerprint@2.1-ser
     user system
     group system input uhid
 
-service oppo_fingerprints_sh /vendor/bin/sh /odm/bin/init.oppo.fingerprints.sh
+service oplus_fingerprints_sh /vendor/bin/sh /odm/bin/init.oplus.fingerprints.sh
     class main
     user root
     oneshot
 
 on boot
+
+#for jiiov_fp.
+    chown system system /dev/jiiov_fp
+    chmod 0666 /dev/jiiov_fp
+
 #for goodix_fp.
     chown system system /dev/goodix_fp
 
@@ -35,7 +40,9 @@ on post-fs-data
     chown system  system /sys/bus/platform/devices/fpc_interrupt/irq
     chown system  system /sys/bus/platform/devices/fpc_interrupt/irq_enable
     chown system  system /sys/bus/platform/devices/fpc_interrupt/irq_unexpected
+    chown system  system /sys/bus/platform/devices/fpc_interrupt/regulator_enable
     chmod 0200 /sys/bus/platform/devices/fpc_interrupt/irq_enable
+    chmod 0200 /sys/bus/platform/devices/fpc_interrupt/regulator_enable
     chmod 0200 /sys/bus/platform/devices/fpc_interrupt/clk_enable
     chmod 0200 /sys/bus/platform/devices/fpc_interrupt/wakelock_enable
     chmod 0600 /sys/bus/platform/devices/fpc_interrupt/irq
@@ -46,13 +53,14 @@ on post-fs-data
     #zhoubo@BSP.Biometrics.Fingerprint, 2020/09/10, modify for fpc in QCOM (SM6125R Homer)
     chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/irq
     chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/irq_enable
+    chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/regulator_enable
     chown system system /sys/bus/platform/devices/soc:fpc_fpc1020/wakelock_enable
     #endif /* OPLUS_FEATURE_FINGERPRINT */
 
 #-----------------------  for optical sensor begin    ---------------------
     mkdir /data/vendor/fingerprint 0770 system system
     mkdir /mnt/vendor/persist/fingerprint 0770 system system
-    chown system system /sys/kernel/oppo_display/hbm
+    chown system system /sys/kernel/oplus_display/hbm
 #-----------------------   for optical sensor end     ---------------------
 #add for silead_optical_fp
     mkdir /data/vendor/silead 0770 system system
@@ -61,6 +69,10 @@ on post-fs-data
 #add for egis optical fp
     mkdir /data/vendor/optical_fingerprint   0770 system system
 
+#add for jiiov optical fp
+    mkdir /data/vendor/FactoryTestReport   0770 system system
+    mkdir /mnt/vendor/persist/fingerprint/jiiov 0770 system system
+
 #Ziqing.Guo@EXP.BSP.Fingerprint.Basic, 2019/08/17, modify for sdsp init fail
 on property:sys.boot_completed=1
-    setprop vendor.oppo.biometrics.fingerprint.boot_completed 1
+    setprop vendor.oplus.biometrics.fingerprint.boot_completed 1
